[package]
name = "wallfire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
features = "0.10.0"
futures-util = "0.3.29"
http-body-util = "0.1.0"
hyper = { version = "1.0.1", features = ["server", "client", "full"] }
lazy_static = "1.4.0"
pin-project-lite = "0.2.13"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["net", "full"] }

